style.css
body {
    margin: 0;
    padding: 0;
    background-color: #05263a;
    color: rgb(223,9,5);
    font-family: "Special Elite", serif;
    height: 100%;
}

html {
    height: 100%;
}

.wrapper {
    height: 100%;
}

.header-container {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url(images/heroimg.png);
    background-position: center;
    background-size: cover;
    background-color: black;
    padding: 3%;
    text-align: center;
    height: 10%;
    padding-left: 8px;
}

.game-title {
    font-size: 30px;
    text-shadow: 3px 3px 3px rgba(0,0,0,0.7);
    margin-top: 0;
    margin-bottom: 0;
    display: inline-block;
}

.game-title-flipped {
    font-size: 60px;
    /* display: inline-block; */
    margin-top: -20px;
    margin-bottom: 0;
    -webkit-transform:rotate(-180deg);
    -moz-transform:rotate(-180deg);
    -o-transform:rotate(-180deg);
    transform:rotate(-180deg);
    text-shadow: -5px -5px 5px rgba(0,0,0,0.7);
}

.game-title-subtitle {
    text-shadow: 3px 3px 3px rgba(0,0,0,0.7);
}

.nav {
    display: inline-block;
}

#main-content {
    height: 90%;
    background-color: black;
}

#stats {
    padding-left: 8px;
    color: red;
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-top: 1px solid rgb(223,9,5);
    border-bottom: 1px solid rgb(223,9,5);
    position: relative;
}

.stats-title {
    font-size: 26px;
}

#game-bg {
    /* background-image: url("images/background1.jpg"); */
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    position: relative;
    height: 100%;
}

#game-bg img {
    display: block;
    max-width: 100%;
}

#game-area {
    background-image: url(images/background1.jpg);
    background-size: cover;
    background-position: center;
    height: 100%;
    text-align: center;
    /* padding-bottom: 5px; */
    position: relative;
    top: 0;
    width: 100%;

    /* display: grid;
    grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
    grid-template-rows: 33% 33% 33%; */

    display: flex;
    flex-flow: row wrap;
}

.card-container {
    /* display: inline-block; */
    /* position: relative; */
    /* margin: 0 auto; */
    /* width: 85%; */
    flex: 1 0 16%;
    margin: 5px 0;
    
    /* flex-grow: 1;
    flex: 1 1 16%; */
}

.card {
    /* keeping this at 5% makes the cards stick out the side when using flex */
    /* left: 1%; */
    /* top: 5%; */
    /* height: 100%; */
    width: 100%;
    position: relative;
}

.card img {
    /* height: 80%; */
    width: 80%;
}

.back {
    opacity: 1;
    -moz-transition: opacity .5s ease-in-out;
    -webkit-transition: opacity .5s ease-in-out;
    transition: opacity .5s ease-in-out;
}

.card img.hidden {
    opacity: 0;
}

/* CARD CSS*/

.front, .back {
    top: 0;
    left: 0;
    width: 100%;
}

.front {
    position: relative;
}

.back {
    position: absolute;
}

.back img {
    transition: opacity 0.5s;
    max-width: 100%;
}

.front > img {
    transition: opacity 2.5s;
    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.9);
    max-width: 100%;
}

.fade .front img {
    opacity: 0;
}

img.back:hover {
    cursor: pointer;
}

.front img, .back img {
    border-radius: 10px;
}

.hidden .back img {
    opacity: 0;
}

.label, .value {
    font-size: 15px;
}

.reset {
    background-color: black;
    color: rgb(223,9,5);
    border: 1px solid rgb(223,9,5);
    font-family: "Special Elite", serif;
    font-size: 25px;
    padding: 10px;
    transition: background-color .5s;
    border-radius: 10px;
}

.reset:focus{
    outline: rgb(223,9,5)
}

.reset:hover {
    background-color: rgb(110, 3, 2);
    color: red;
    text-shadow: 2px 2px black;
}

/* MODAL CSS */

.modal {
    display: flex;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.7);
}

.modal::before {
    vertical-align: middle;
}

.modal-body {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/win.png);
    background-color: #000000;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
    margin: 10% auto;
    padding: 20px;
    box-shadow: 3px 3px 3px rgba(0,0,0,0.5);
    border-radius: 20px;
    width: 60%;
    text-align: center;
}

.modal-content {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    height: 100%;
}

.modal-hide {
    display: none;
}

.win {
    font-size: 40px;
    text-shadow: 1px 1px black;
    /* padding-top: 30%; */
}

.win p {
    margin-bottom: 0px;
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover, .close:focus {
    color: red;
    text-decoration: none;
    cursor: pointer;
}

/* MEDIA QUERIES */


/* @media screen and ()
.stats-title {
    font-size: 40;
} */

@media screen and (min-width: 1088px){
    /* .card-container {
        width: 85%;
    } */
}

@media screen and (orientation: portrait){
    .card-container {
        /* flex: 1 0 30%; */
    }
    #game-area {
        /* grid-template-columns: 33% 33% 33%;
        grid-template-rows: 16% 16% 16% 16% 16% 16%; */
    }

    #game-area img {
        /* max-height: 100%; */
    }

    /* #game-bg img {
        max-width: 100%;
    } */
}

